--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+upload_speed = 921600
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	tzapu/WiFiManager@^0.16.0
